This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

17-Mar-2002 (Lars Duening)  (3.3.425)
  - (backend.c, gcollect.c) Corrections to the cleanup code: removed an
      interaction between the cleanup code and the swapper, which caused an
      incomplete cleanup; made sure that dirty mappings are compacted just
      once; and made sure that the backend cleanup code actually cycles
      through the object list.
  - (call_out.c) Removed a memory leak in remove_call_out()/find_call_out().

17-Mar-2002 (Lars Duening)  (3.3.424)
  - (doc/master) Added missing manpages for the parse_command() support
      (reported by Zonk).
  - (main, simulate.c, configure) New commandline option '--filename-spaces'
      to allow space characters in filenames (default is to disallow them).
  - (object.c) Shared variable closures were saved without the '<num>=' header
      (reported by Menaures and Fiona).

17-Mar-2002 (Lars Duening)  (3.3.423)
  - (mapping.c) Removed a memory leak.

15-Mar-2002 (Lars Duening)  (3.3.422)
  - (gcollect.c) The NEW_CLEANUP code treated the driver hooks like other
      svalues, which was bad because it caused lambda-closure hooks bound
      to destructed objects to disappear. Since these closures can be re-bound
      on the fly, the cleanup code now does exactly that (reported by
      Nostradamus and Bardioc).

14-Mar-2002 (Lars Duening)  (3.3.421)
  - (driver.h, smalloc.c) Removed a build problem when MALLOC_CHECK
      was not defined, but MALLOC_TRACE was (reported by Nostradamus).

13-Mar-2002 (Lars Duening)  (3.3.420)
  - (xalloc.c, smalloc.c, configure) New configuration option
      '--enable-malloc-sbrk' to selectively allow the memory allocator to use
      sbrk() instead of malloc() where available (default is to allow sbrk()).
      The idea is to circumvent limitations some system put on sbrk().
      (suggested by Tomba)
