@@ -53,13 +53,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 425)
-(Parent-Version lpmud 3-3 424)
-(Version-Log "Made various corrections to the data cleanup code, among other things fixing a crasher (memory freed twice).
-Removed a memory leak in find_call_out()/remove_call_out().")
+(Project-Version lpmud 3-3 426)
+(Parent-Version lpmud 3-3 425)
+(Version-Log "Saving/restoring structs now also save the defining program's name, and use it for restores across modules..")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 17 Mar 2003 23:07:13 -0700")
+(Checkin-Time "Wed, 19 Mar 2003 15:20:10 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -96,7 +95,7 @@ Removed a memory leak in find_call_out()/remove_call_out().")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.59 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.488 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.489 644))
   (HISTORY (lpmud/f/49_HISTORY 1.310 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -192,7 +191,7 @@ Removed a memory leak in find_call_out()/remove_call_out().")
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.14 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.38 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.18 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.65 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.66 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
   (src/md5.c (lpmud/l/19_md5.c 1.6 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
@@ -204,7 +203,7 @@ Removed a memory leak in find_call_out()/remove_call_out().")
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.3 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.25 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.26 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -276,7 +275,7 @@ Removed a memory leak in find_call_out()/remove_call_out().")
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.75 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.4 644))
-  (src/structs.c (lpmud/d/b/6_structs.c 1.10 644))
+  (src/structs.c (lpmud/d/b/6_structs.c 1.11 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.1 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.3 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
